--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
 		<title>Topologische 2-Mannigfaltigkeiten Visualisator</title>
 		<meta name="author" content="Luca Leon Happel">
 		<link rel="stylesheet" href="css/master.css">
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 		<script type="module" src="src/main.mjs"></script>
 	</head>
 	<body>
 		<h2>Topologische 2-Mannigfaltigkeiten Visualisator</h2>
-		<div id="preview"></div>
+		<div>
+			<div id="preview"></div>
+			<h3>Informationen</h3>
+			<table id="info">
+				<tr>
+					<td>Name:</td>
+					<td><span id="name"></span></td>
+				</tr>
+				<tr>
+					<td>Formel:</td>
+					<td><span id="formula"></span></td>
+				</tr>
+				<tr>
+					<td>Euler Charakteristik:</td>
+					<td><span id="eulerchar"></span></td>
+				</tr>
+			</table>
+		</div>
 		<div>
 			<h3>Einstellungen</h3>
 			<table>
@@ -24,7 +43,7 @@
 				</tr>
 				<tr>
 					<td>Geschlecht/Kreuzkappenzahl</td>
-					<td><input type="number" id="demigenus" min="0" step="1" value="1"></td>
+					<td><input type="number" id="demigenus" min="0" step="1" value="0"></td>
 				</tr>
 			</table>
 		</div>
