fixed placement of unorientable manifolds

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	</head>
 	<body>
 		<h2>Topologische 2-Mannigfaltigkeiten Visualisator</h2>
-		<div>
-			<div id="preview"></div>
+		<div id="preview"></div>
+		<div id="info">
 			<h3>Informationen</h3>
 			<table id="info">
 				<tr>
@@ -29,13 +29,13 @@
 				</tr>
 			</table>
 		</div>
-		<div>
+		<div id="settings">
 			<h3>Einstellungen</h3>
 			<table>
 				<tr>
 					<td >Bildgröße</td>
-					<td><input type="number" id="width" value="300"></td>
-					<td><input type="number" id="height" value="300"></td>
+					<td><input type="number" id="width" value="350"></td>
+					<td><input type="number" id="height" value="350"></td>
 				</tr>
 				<tr>
 					<td >Orientierbar</td>
