added save-rendering button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 					<td>Geschlecht/Kreuzkappenzahl</td>
 					<td><input type="number" id="demigenus" min="0" step="1" value="0"></td>
 				</tr>
+				<tr>
+					<td><button id="save">Bild speichern</button</td>
+				</tr>
 			</table>
 		</div>
 	</body>
