--- a/index.html
+++ b/index.html
@@ -50,5 +50,11 @@
 				</tr>
 			</table>
 		</div>
+		<footer>
+			Basierend auf der Vorlesung "Algebraische Geometrie" von
+			<a href="http://reh.math.uni-duesseldorf.de/~schroeer/20_ss_Algebra/Algebra.html">Professor Dr. Stefan Schröer</a>
+			<br>
+			© 2021 <a href="https://quoteme.github.io/">Luca Leon Happel</a>
+		</footer>
 	</body>
 </html>
