added animations for explaining orientability

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				<tr>
 					<td >Orientierbar</td>
 					<td><input type="checkbox" id="orientable" checked></td>
+					<td>(<a href="https://imgur.com/gallery/50Xw3oy">Erklärungsanimationen</a>)</td>
 				</tr>
 				<tr>
 					<td>Geschlecht/Kreuzkappenzahl</td>
