fixed lighting - added first steps for homeomorphism

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 			<h3>Einstellungen</h3>
 			<table>
 				<tr>
+					<td>Flächenworthomöomorphismus<br>(unter Bearbeitung)</td>
+					<td><canvas id="flaeche" width="100px" height="100px"></canvas></td>
+				</tr>
+				<tr>
 					<td >Bildgröße</td>
 					<td><input type="number" id="width" value="350"></td>
 					<td><input type="number" id="height" value="350"></td>
