--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 		<div id="settings">
 			<h3>Einstellungen</h3>
 			<table>
-				<tr>
-					<td>Flächenworthomöomorphismus<br>(unter Bearbeitung)</td>
-					<td><canvas id="flaeche" width="100px" height="100px"></canvas></td>
-				</tr>
+				<!-- <tr> -->
+				<!-- 	<td>Flächenworthomöomorphismus<br>(unter Bearbeitung)</td> -->
+				<!-- 	<td><canvas id="flaeche" width="100px" height="100px"></canvas></td> -->
+				<!-- </tr> -->
 				<tr>
 					<td >Bildgröße</td>
 					<td><input type="number" id="width" value="350"></td>
