added link to index

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 					<td><input type="number" id="demigenus" min="0" step="1" value="0"></td>
 				</tr>
 				<tr>
-					<td><button id="save">Bild speichern</button</td>
+					<td><button id="save">Bild speichern</button></td>
+					<td><a id="link">Link zur Mannigfaltigkeit</a></td>
 				</tr>
 			</table>
 		</div>
